# todo

./: Cargo.toml  deneme.todo  todo.td
file-format/: Cargo.toml
file-format/src/: lib.rs  read.rs  write.rs
todo/: Cargo.toml
todo-cli/src/: clap_structure.rs  lib.rs
todo-output/: Cargo.toml
todo-output/src/: lib.rs
todo-structure/: Cargo.toml
todo-structure/src/: date.rs  lib.rs  tests.rs  todo.rs
todo-structure/src/date/: days.rs
todo/src/: lib.rs  main.rs  user_input.rs
