[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-format = { path = "../file-format"}
todo-structure = { path = "../todo-structure"}
todo-output = { path = "../todo-output" }
todo-cli = { path = "../todo-cli" }
